--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "digitsweb",
-    "short_name": "digitsweb",
+    "name": "minuteskill_web_app",
+    "short_name": "minuteskill_web_app",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
